# private_data_interaction

./: .buildinfo  README.md  api.html  documentation.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: api.doctree  documentation.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
.github/workflows/: publish-sphinx-documentation.yml
_sources/: documentation.rst.txt  index.rst.txt  installation.rst.txt
docs/: api.rst  conf.py  usage.rst
private_data_interaction/: (0_0)icelandic_age_distribution_processing.ipynb  (0_1)icelandic_income_distribution_processing.ipynb  (1_0)generate_data.ipynb  (2_0)example_research_proposal.ipynb  (3_0)create_incoming_data.ipynb  age_curves.csv  data_space.py  fake_data.csv  hagstofa_data.csv  hagstofa_metadata.json  icelandic_age_distribution.csv  icelandic_age_distribution_postprocessed.csv  icelandic_income_distribution.csv  icelandic_income_distribution_postprocessed.csv  income_curve.csv  kennitala.py  medical_metadata.json
private_data_interaction/api/: main.py  streamlit_app.py
private_data_interaction/test_upload_data/: correct_csv_metadata.json  hagstofa_metadata.json  incorrect_csv.csv  medical_data.csv  medical_metadata.json
source/: conf.py  index.rst
tests/: test_kennitala.py
