[tool.poetry]
name = "private-data-interaction"
version = "0.1.0"
description = ""
authors = ["ivan <imtambovtcev@gmail.com>"]
readme = "README.md"
packages = [{include = "private_data_interaction"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
jupyter = "^1.1.1"
pytest = "^8.3.4"
numpy = "^2.2.0"
faker = "^33.1.0"
matplotlib = "^3.9.4"
scipy = "^1.14.1"
pip = "^24.3.1"
fastapi = "^0.115.6"
uvicorn = "^0.33.0"
python-multipart = "^0.0.19"
chardet = "^5.2.0"
streamlit = "^1.41.1"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
